update fix z-index content support header builder.

--- a/assets/css/rtl/layout/header.scss
+++ b/assets/css/rtl/layout/header.scss
@@ -75,7 +75,7 @@
 					&:not(.sub-mega-menu) {
 						>li {
 							>ul {
-								right: 110%;
+								right: 90%;
 							}
 
 							&:hover {
