--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -77,7 +77,7 @@
 	.content-top {
 		padding: 35px 0 15px 0;
 		position: relative;
-		z-index: 2;
+		z-index: 0;
 
 		.woostify-container {
 			display: flex;
@@ -139,6 +139,10 @@
 				margin-right: 20px;
 			}
 		}
+	}
+
+	.onsale {
+		z-index: 0;
 	}
 
 	// Grid layout
@@ -220,6 +224,9 @@
 		a {
 			display: block;
 		}
+	}
+	.tns-nav {
+		z-index: 0;
 	}
 }
 
@@ -935,4 +942,9 @@
 			margin-top: 20px;
 		}
 	}
+}
+
+// BUTTON PAYPAL
+.paypal-button {
+	z-index: 0;
 }
